...

    if (numero == 1) {
        valHauteurImage = 85
        valLargeurImage = 149

        valQuestion = "Qui est actuellement le vainqueur de Mister Olympia (catégorie Classique Physique) depuis 4 ans d'affilée ?"
        valReponse1 = "Chris Bumstead"
        valimage1 = "chrisbumstead"
        valReponseDescription1 = "Et oui, Chris Bumstead est le champion du monde depuis 4 ans !"

        valReponse2 = "Ramon Rocha Queiroz"
        valimage2 = "ramonrochaqueiroz"
        valReponseDescription2 = "Plus connu sous le nom de Ramon Dino, il est arrivé 2ème à Mister Olympia 2022. Il est le plus grand challenger de Chris Bumstead."

        valReponse3 = "Stephane Matala"
        valimage3 = "stephanematala"
        valReponseDescription3 = "Stéphane Matala est un Français. Il est nouveau dans le domaine et il est bien parti pour devenir un grand champion."

        valReponse4 = "Nickolas Venuti"
        valimage4 = "nickolasvenuti"
        valReponseDescription4 = "Nickolas Venuti est seulement un influenceur mais ne fait pas de grandes compétitions."
    }
    if (numero == 2) {
        valHauteurImage = 120
        valLargeurImage = 120
        valQuestion = "Parmi ces artistes, qui a la musique la plus écoutée ?"

        valReponse1 = "XXX Tentacion"
        valimage1 = "xxxtentacion"
        valReponseDescription1 = "XXXTentacion est largement au-dessus des autres avec son titre \"SAD!\" qui compte plus de 2 milliards 150 millions d'écoutes."

        valReponse2 = "Scarlxrd"
        valimage2 = "scarlxrd"
        valReponseDescription2 = "Scarlxrd n'a pas la musique la plus écoutée des quatre, mais il a quand même réussi à atteindre les 115 millions d'écoutes avec sa chanson \"Heart Attack\"."

        valReponse3 = "So la lune"
        valimage3 = "solalune"
        valReponseDescription3 = "So La Lune a le son le moins écouté des quatre mais fait partie des plus originaux, ce qui divise les avis. Cependant, il a tout de même son titre \"Rodé\" qui a 22 millions d'écoutes."

        valReponse4 = "Laylow"
        valimage4 = "laylow"
        valReponseDescription4 = "Laylow a atteint les 55 millions d'écoutes avec \"SPECIAL\", en featuring avec Nekfeu, ce qui est très honorable pour un Français."
    }
    if (numero == 3) {
        valHauteurImage = 84
        valLargeurImage = 149
        valQuestion = "Quelle est la paire de chaussures la plus chère parmi les quatre ?"

        valReponse1 = "Air Jordan 1 Retro High Off-White Chicago"
        valimage1 = "airjordan1chicago"
        valReponseDescription1 = "Et oui, la Air Jordan 1 Chicago est la plus chère des quatre, au prix de 10 600 euros."

        valReponse2 = "Baskets en cuir rhyton Gucci"
        valimage2 = "basketsrhytongucci"
        valReponseDescription2 = "Même si c'est une chaussure Gucci, elle n'est pas si chère que ça car elles sont au prix de 860 euros."

        valReponse3 = "Balmain Unicorn"
        valimage3 = "balmainunicorn"
        valReponseDescription3 = "Les Balmain Unicorn sont celles qui ont l'aspect le plus particulier, mais leur prix n'est pas le plus élevé, avec une valeur de 995 euros."

        valReponse4 = "Nike SB Dunk Low Travis Scott"
        valimage4 = "dunklowtravis"
        valReponseDescription4 = "Les Dunk Low de Travis sont au prix de 2 100 euros et sont les deuxièmes plus chères de cette liste."
    }

    //Définition de mes réponses et de leurs labels avec un .shuffled pour qu'elles changent de place.
    val reponses = listOf(
...
            onClick = onClick,
            modifier = Modifier
                .height(50.dp)
                .width(300.dp)
                .paddingFromBaseline(bottom = 10.dp)
        ) {
            Text("Retour")
        }
    }
}

//Affichage de ma question
@Composable
...
            ),
            textAlign = TextAlign.Center,
        )
    }
}

//Affichage du texte "Bonne Réponse" et appel de ma fonction image, ainsi que des explications de la réponse
@Composable
fun Bonne_Reponse_Affichage(reponseDescription : String, image: String?, hauteur : Int, largeur : Int){
    Column(
        modifier = Modifier
            .fillMaxSize()
            .padding(30.dp),
...
        Affichage_Image(image = image.toString(), hauteur = hauteur*2, largeur = largeur*2)
        Spacer(modifier = Modifier.height(30.dp))
        Explication_Resultat_Affichage(reponseDescription)
    }
}

//Affichage du texte "Mauvaise Réponse" et appel de ma fonction image, ainsi que des explications de la réponse
@Composable
fun Mauvaise_Reponse_Affichage(ReponseDescription : String, image: String?, hauteur : Int, largeur : Int){
    Column(
        modifier = Modifier
            .fillMaxSize()
            .padding(30.dp),
...
